fix: DES encryption, home functions, save user button loader

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
-    "crypto-js": "^3.3.0",
     "expo": "~38.0.9",
     "expo-splash-screen": "^0.5.0",
     "expo-status-bar": "^1.0.0",
@@ -24,6 +23,7 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "~0.62.2",
+    "react-native-des-cbc": "^1.0.9",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-popup-dialog": "^0.18.3",
     "react-native-reanimated": "^1.9.0",
